--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=55c17434d214c7ae4863b035c03e9a3c&libraries=services"></script>
+    <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=55c17434d214c7ae4863b035c03e9a3c&libraries=services"></script> -->
+    <!-- <script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=983769166270a585e2bd0260628e4a74&autoload=false"></script> -->
   </body>
 </html>
