kakao map script

--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,6 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=983769166270a585e2bd0260628e4a74&libraries=services"></script>
   </body>
 </html>
